--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
         <title>NOTICIA</title>
     </head>
     <body>
+        <header>
+            
+        </header>
+        <navbar>
+            <ul>
+                <li>
+
+                </li>
+            </ul>
+        </navbar>
+        <section>
+
+        </section>
 
     </body>
 </html>
