styles path modified

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="es">
     <head>
         <meta charset="ut-8">
-        <link rel="stylesheet" type="text/css" href="../styles/reset.css"/>
-        <link rel="stylesheet" type="text/css" href="../styles/styles.css"/>
+        <link rel="stylesheet" type="text/css" href="styles/reset.css"/>
+        <link rel="stylesheet" type="text/css" href="styles/styles.css"/>
         <title>Infobae Caso Gabby Petito</title>
     </head>
     <body>
