--- a/News2/news-abc.html
+++ b/News2/news-abc.html
@@ -2,8 +2,8 @@
 <html lang="es">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="../styles/reset.css"/>
-        <link rel="stylesheet" type="text/css" href="../styles/styles.css"/>
+        <link rel="stylesheet" type="text/css" href="/styles/reset.css"/>
+        <link rel="stylesheet" type="text/css" href="/styles/styles.css"/>
         <title>How Australia could become the world's most COVID-19 vaccinated country</title>
     </head>
     <body>
