correct path added

--- a/News2/news-abc.html
+++ b/News2/news-abc.html
@@ -10,7 +10,7 @@
         <header id="header">
             <div id="linksTop">
                 <div class="newsLinkImg">
-                    <a href="">
+                    <a href="https://www.abc.net.au/news/">
                         <span>
                             <img src="../img/ABC-News-logo-800x420-800x420.png">
                         </span>
@@ -116,7 +116,7 @@
                     </a>
                 </li>
                 <li class="listLinks">
-                    <a href="https://vicenzomantilla.github.io/RR-DEV-VM-SEM01/index.html">
+                    <a href="https://vicenzomantilla.github.io/RR-DEV-VM-SEM01/">
                         WEEK01
                     </a>
                 </li>
