--- a/News2/news-abc.html
+++ b/News2/news-abc.html
@@ -116,7 +116,7 @@
                     </a>
                 </li>
                 <li class="listLinks">
-                    <a href="https://vicenzomantilla.github.io/RR-DEV-VM-SEM01/">
+                    <a href="https://vicenzomantilla.github.io/RR-DEV-VM-SEM01/index.html">
                         WEEK01
                     </a>
                 </li>
